# Synthetic-Data-Generator-From-User-Prompts

./: .env.example  .gitignore  DEMO_MODE.md  DEPLOYMENT.md  LICENSE  README.md  TEST_README.md  check_demo.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_demo_mode.py  test_full_pipeline.py  test_server.sh
.bmad-core/: install-manifest.yaml
bmad/: A10P5_bmad_method.md
docs/: architecture.md  brainstorming-session-results.md  brief.md  prd.md
docs/architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: checklist-results-report.md  epic-1-foundation-core-data-generation-pipeline.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md
src/api/: models.py  routes.py
src/core/: config.py  exceptions.py
src/frontend/: __init__.py  gradio_app.py
src/services/: anthropic_schema_generator.py  cache_service.py  csv_exporter.py  data_generator.py  mock_schema_generator.py  schema_generator.py
src/utils/: file_operations.py  hash_utils.py
